get marks by course id
